web-infras/parser/tests/fixtures/babel/es2015/yield/parameter-default-inside-arrow-inside-generator-4/output.txt
[SyntaxError]: yield expression can not used in parameter list (2,18)
2|  (a, b = 3, x = yield) => {};
 |                ^
